# lwiot-esp32

./: .gitmodules  CMakeLists.txt
cmake/: esp32.cmake  freertos.cmake  spiffs_tools.mk
esp32/: CMakeLists.txt  esp32_ap.cpp  esp32_sta.cpp  esp32_station.cpp  esp32_wifi.c  esp32adcchip.cpp  esp32dacchip.cpp  esp32gpio.h  esp32gpiochip.cpp  esp32i2calgorithm.cpp  esp32primaryadc.cpp  esp32pwmchannel.cpp  esp32pwmtimer.cpp  esp32secondaryadc.cpp  esp32spi.c  esp32spi.h  esp32spibus.cpp  esp32uart.cpp  esp32watchdog.cpp  hardwarei2calgorithm.cpp  netdb.c  spibus.cpp  spiffs.cpp
esp32/config/Debug/: sdkconfig  sdkconfig.h
esp32/config/Release/: sdkconfig  sdkconfig.h
esp32/include/lwiot/esp32/: esp32adcchip.h  esp32ap.h  esp32dacchip.h  esp32gpiochip.h  esp32i2calgorithm.h  esp32primaryadc.h  esp32pwm.h  esp32secondaryadc.h  esp32spibus.h  esp32sta.h  esp32system.h  esp32uart.h  esp32watchdog.h  hardwarei2calgorithm.h  spibus.h  spiffs.h
esp32/soc/: esp32.c  esp32system.cpp  i2chal.c
tests/esp32-display_test/: Makefile
tests/esp32-events_test/: Makefile  sdkconfig
tests/esp32-events_test/main/: main_thread.cpp
tests/esp32-fsm_test/: Makefile  sdkconfig
tests/esp32-fsm_test/main/: component.mk  main.c  main_thread.cpp
tests/esp32-i2c_test/: sdkconfig
tests/esp32-i2c_test/main/: component.mk  main_thread.cpp
tests/esp32-network_test/: Makefile
tests/esp32-pwm_test/: Makefile  sdkconfig
tests/esp32-pwm_test/main/: component.mk  main_thread.cpp
tests/esp32-rtc_test/: sdkconfig
tests/esp32-rtc_test/main/: main_thread.cpp
tests/esp32-spiffs_test/: partitions.csv  sdkconfig  sdkconfig.old
tests/esp32-spiffs_test/main/: application.cpp  component.mk  main.c
tests/esp32-spiffs_test/spiffs_image/: hello.txt
tests/esp32-xbee_test/: Makefile  sdkconfig
tests/esp32-xbee_test/main/: main_thread.cpp
tests/esp32_test/: sdkconfig
tests/esp32_test/main/: main_thread.cpp
tests/spifs_test/: Makefile  partitions_example.csv  sdkconfig  sdkconfig.old  spiffs_tools.mk
tests/spifs_test/main/: spiffsgen_example_main.c
